[package]
name    = "qbit_controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow  = "1.0"
config  = { version = "0.13", features = ["yaml"] }
fs-err  = "2.11"
log     = "0.4"
log4rs  = { version = "1.2", features = [] }
qbit-rs = "0.4"
serde   = { version = "1.0", features = ["derive"] }
time    = { version = "0.3", features = ["macros"] }
tokio   = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log-always"] }
