[package]
name    = "qbit_controller"
version = "0.2.3"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow   = "1.0"
config   = { version = "0.15", features = ["yaml", "preserve_order"] }
fs-err   = "3.0"
indexmap = { version = "2", features = ["serde"] }
log      = "0.4"
log4rs   = { version = "1.2", features = [] }
qbit-rs  = "0.5"
serde    = { version = "1.0", features = ["derive"] }
time     = { version = "0.3", features = ["macros"] }
tokio    = { version = "1", features = ["full"] }
tracing  = { version = "0.1", features = ["log-always"] }
